<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2016 The TensorFlow Authors. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="main_name">水果</string>
    <string name="sweet_page">Sweet</string>
    <string name="place_page">Place</string>
    <string name="description">description</string>
    <string name="select_classify">選擇辨識方式</string>
    <!-- For activity_login -->
    <string name="input_error_email">請輸入Email</string>
    <string name="input_error_email_invalid">Email格式錯誤</string>
    <string name="input_error_password">請輸入密碼</string>
    <string name="input_error_password_length">密碼長度過短</string>
    <string name="registration_success">註冊成功</string>
    <string name="registration_lose">註冊失敗</string>
    <string name="forget_pwd">忘記密碼？</string>
    <string name="google_signin">使用Google帳號登入</string>
    <!-- For activity_gift_detail -->
    <string name="activity_title">活動名稱：</string>
    <string name="title">這裡是活動名稱</string>
    <string name="activity_date">活動時間：</string>
    <string name="date">這裡是活動時間</string>
    <string name="activity_place">活動地點：</string>
    <string name="place">這裡是活動地點</string>
    <string name="activity_method">活動辦法：</string>
    <string name="method">這裡是活動辦法</string>
    <string name="activity_notice">注意事項：</string>
    <string name="notice">1.第一點注意事項。\n2.第二點注意事項。</string>

</resources>
