<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GiftDetailActivity">

        <android.support.constraint.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/gl_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/gl_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ImageButton
            android:id="@+id/back_toGift"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/black_back_left"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgv_gift"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@null"
            android:scaleType="fitXY"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/back_toGift"
            app:layout_constraintLeft_toRightOf="@id/gl_left"
            app:layout_constraintRight_toRightOf="@id/gl_right"/>

        <!-- 活動名稱 -->
        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_title"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/gl_left"
            app:layout_constraintTop_toBottomOf="@+id/imgv_gift"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/activity_title"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toTopOf="@+id/activity_title" />

        <!-- 活動時間 -->
        <TextView
            android:id="@+id/activity_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_date"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintLeft_toLeftOf="@+id/gl_left"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/activity_date"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toTopOf="@+id/activity_date" />

        <!-- 活動地點 -->
        <TextView
            android:id="@+id/activity_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_place"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintLeft_toLeftOf="@+id/gl_left"/>
        <TextView
            android:id="@+id/place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/activity_place"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toTopOf="@+id/activity_place" />

        <!-- 活動辦法 -->
        <TextView
            android:id="@+id/activity_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_method"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/place"
            app:layout_constraintLeft_toLeftOf="@+id/gl_left"/>
        <TextView
            android:id="@+id/method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/method"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/activity_method"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toTopOf="@+id/activity_method" />

        <!-- 注意事項 -->
        <TextView
            android:id="@+id/activity_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_notice"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/method"
            app:layout_constraintLeft_toLeftOf="@+id/gl_left"/>
        <TextView
            android:id="@+id/notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/activity_notice"
            app:layout_constraintRight_toRightOf="@id/gl_right"
            app:layout_constraintTop_toTopOf="@id/activity_notice" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>